[package]
name = "walky"
version = "0.0.1"
edition = "2021"
description = "A TSP solver written in Rust"
homepage = "https://github.com/lquenti/walky"
repository = "https://github.com/lquenti/walky"
license = "MIT"
authors = ["Lars Quentin <lars@lquenti.de>", "Johann Carl Meyer <info@johannc.de>"]
readme = "./README.md"



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.2.5", features = ["derive"]}          # for cli arg parsing
quick-xml = {version = "0.28.2", features = ["serialize"]} # for xml-parsing
serde = {version = "1.0.160", features = ["derive"]}       # for xml-parsing
delegate = "0.9.0"                                         # for easy wrapper implementations
itertools = "0.10.5"                                       # for lazy permutation generation

[dev-dependencies]
approx = "0.5.1"                # for assertions with float values
