[package]
name = "walky"
version = "0.0.1"
edition = "2021"
description = "A TSP solver written in Rust"
homepage = "https://github.com/lquenti/walky"
repository = "https://github.com/lquenti/walky"
license = "MIT"
authors = ["Lars Quentin <lars@lquenti.de>", "Johann Carl Meyer <info@johannc.de>"]
readme = "./README.md"



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.2.5", features = ["derive"]}          # for cli arg parsing
quick-xml = {version = "0.28.2", features = ["serialize"]} # for xml-parsing
serde = {version = "1.0.160", features = ["derive"]}       # for xml-parsing
delegate = "0.9.0"                                         # for easy wrapper implementations
rayon = "1.7.0"                                            # for parallel iterators
ordered-float = {version = "3.7.0", features = ["serde"]}  # for Total Ordering on floats

[dev-dependencies]
approx = "0.5.1"                # for assertions with float values
quickcheck = "1.0.3"            # for property based testing
quickcheck_macros = "1.0.0"     # for property based testing

[profile.release]
debug = true                    # enable profiling in release builds

